docs/v0.16.0/_sources/gallery/basic/plot_dispersion.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/basic/plot_dispersion.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_basic_plot_dispersion.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_basic_plot_dispersion.py:


Dispersion VS core index
========================

.. GENERATED FROM PYTHON SOURCE LINES 8-10

Imports
~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 10-14

.. code-block:: Python

    from PyFiberModes import ConvergenceError, FiberFactory, HE11, HE12, HE22
    import matplotlib.pyplot as plt
    import numpy








.. GENERATED FROM PYTHON SOURCE LINES 15-18

Generating the fiber structures
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Here we create the different fiber design that we want to explore

.. GENERATED FROM PYTHON SOURCE LINES 18-24

.. code-block:: Python

    core_indexes = numpy.linspace(1.464, 1.494, 100)
    factory = FiberFactory(wavelength=1550e-9)
    factory.add_layer(name="core", radius=4e-6, index=core_indexes)
    factory.add_layer(name="cladding", index=1.4444)









.. GENERATED FROM PYTHON SOURCE LINES 25-26

Preparing the figure

.. GENERATED FROM PYTHON SOURCE LINES 26-51

.. code-block:: Python

    figure, ax = plt.subplots(1, 1)

    ax.set(
        title='Dispersion vs core index',
        xlabel='Core refractive index',
        ylabel='Modal dispersion'
    )

    for mode in [HE11, HE12, HE22]:
        data = []
        for fiber in factory:
            try:
                effective_index = fiber.get_dispersion(mode)
            except ConvergenceError:
                # Higher-order modes can be unguided below cutoff. Use NaN so the
                # plot shows a gap without obscuring other guided solutions.
                effective_index = numpy.nan
            data.append(effective_index)

        ax.plot(core_indexes, data, label=str(mode))

    plt.legend()
    plt.show()

    # -



.. image-sg:: /gallery/basic/images/sphx_glr_plot_dispersion_001.png
   :alt: Dispersion vs core index
   :srcset: /gallery/basic/images/sphx_glr_plot_dispersion_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.763 seconds)


.. _sphx_glr_download_gallery_basic_plot_dispersion.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_dispersion.ipynb <plot_dispersion.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_dispersion.py <plot_dispersion.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_dispersion.zip <plot_dispersion.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
